Fix icon alignment, remove menu toggle show/hide logic

--- a/src/app/pages/list/multiselect-list/multiselect-list.component.scss
+++ b/src/app/pages/list/multiselect-list/multiselect-list.component.scss
@@ -7,6 +7,7 @@ footer {
     width: 100%;
     position: fixed;
     margin: auto;
+    margin-bottom: env(safe-area-inset-bottom);
     bottom: 0;
     left: 50%;
     text-align: center;
